# JovialityApp

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/demo/yc/jovialityyc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: skin_black.apk  skin_green.apk  skin_purple.apk  skin_red.apk
app/src/main/java/demo/yc/joviality/: MyApp.java
app/src/main/java/demo/yc/joviality/activity/: CollectionActivity.java  HomeActivity.java  MainActivity.java
app/src/main/jni/: native-lib.c
app/src/main/res/anim/: main.xml
app/src/main/res/color/: navig_menu_color.xml
app/src/main/res/layout/: activity_collection.xml  activity_gank_detail.xml  activity_home.xml  activity_image_detail.xml  activity_main.xml  activity_search.xml  activity_setting.xml  activity_skin_change.xml  activity_url_detail.xml  fragment_image_list.xml  fragment_image_main.xml  fragment_list_news.xml  fragment_list_type.xml  fragment_list_video.xml  fragment_main_type.xml  fragment_new_main.xml  fragment_video_main.xml  home_navigation_header_layout.xml  home_tool_bar.xml  load_end_layout.xml  load_failed_layout.xml  load_loading_layout.xml  recycler_gank_list.xml  recycler_image_list.xml  recycler_news_list.xml  recycler_skin_list.xml
app/src/main/res/menu/: detail_menu.xml  home_navigation_menu.xml  toolbar_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: dimens.xml
app/src/test/java/demo/yc/jovialityyc/: ExampleUnitTest.java
lib/: build.gradle
(+149 files in other folders)
